apps/uptime-kuma/namespace.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    name: uptime-kuma
